--- a/css/page.css
+++ b/css/page.css
@@ -1,25 +1,34 @@
+:root {
+    --main-color: #375662;
+    --main-color-light: #709fb0;
+}
+
 body {
     margin: 0;
     padding: 0;
     background: #fff;
     line-height: 1.5;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    font-family: Arial, Helvetica, sans-serif;;
 }
 
 header {
     text-align: center;
-    padding-top: 2rem;
     margin-bottom: 2rem;
+    background: url(/front/themes/wave/imgs/wave-header.svg) bottom /100% auto,
+                var(--main-color) content-box;
+    background-repeat: no-repeat;
+    padding-bottom: 5%;
+}
+header > *:first-child {
+    padding-top: 2rem;
+}
+header > * {
     padding-left: 1rem;
     padding-right: 1rem;
-    background: #375662;
-}
-
-header::after {
-    content: url(/front/themes/wave/imgs/wave-header.svg) !important;
-    display: block !important;
-    background: #fff;
-    margin-right: -1rem;
-    margin-left: -1rem;
 }
 
 header > p {
@@ -38,6 +47,11 @@ header a {
     margin-right: 10px !important;
     white-space: nowrap !important;
     font-size: 1.3rem !important;
+    text-decoration: none !important;
+}
+
+header a:hover {
+    text-decoration: underline !important;
 }
 
 header *, footer * {
@@ -49,26 +63,46 @@ header *, footer * {
     margin: auto;
     margin-left: 20%;
     margin-right: 20%;
-    font-size: 1.1rem;
+    font-size: 1.2rem;
+    flex: 3;
 }
+
+/* list_image */
+#content .list_image ul {
+    list-style-type: none;
+    padding: 0;
+}
+#content .list_image li {
+    padding: 15px;
+    min-height: calc(5rem + 15px);
+}
+#content .list_image li:not(:last-child) {
+    border-bottom: dashed #ccc 2px;
+}
+#content .list_image img:first-child {
+    max-width: 5rem;
+    float: left;
+    margin: -15px 15px -15px 0;
+}
+/* end list_image */
 
 footer {
     text-align: center;
+    margin-top: 2rem;
+    background: url(/front/themes/wave/imgs/wave-footer.svg) top /100% auto,
+                var(--main-color) content-box;
+    background-repeat: no-repeat;
+    padding-top: 5%;
+}
+footer > *:first-child {
+    padding-top: 2rem !important;
+}
+footer > *:last-child {
+    padding-bottom: 2rem;
+}
+footer > * {
     padding-left: 1rem;
     padding-right: 1rem;
-    padding-bottom: 2rem;
-    margin-top: 2rem;
-    background: #375662;
-}
-
-footer::before {
-    content: url(/front/themes/wave/imgs/wave-footer.svg) !important;
-    display: block !important;
-    background: #375662;
-    margin-right: -1rem;
-    margin-left: -1rem;
-    margin-bottom: 2rem;
-    font-size: 0;
 }
 
 @media all and (max-width: 1000px) {
