--- a/css/page.css
+++ b/css/page.css
@@ -17,11 +17,7 @@ body {
 
 header {
     text-align: center;
-    margin-bottom: 2rem;
-    background: url(/front/themes/wave/imgs/wave-header.svg) bottom /100% auto,
-                var(--main-color) content-box;
-    background-repeat: no-repeat;
-    padding-bottom: 5%;
+    background: var(--main-color);
 }
 header > *:first-child {
     padding-top: 2rem;
@@ -58,6 +54,26 @@ header *, footer * {
     color: #fff !important;
 }
 
+/* waves */
+.header-wave {
+    margin-bottom: 2rem;
+    margin-top: -2px;
+}
+.footer-wave {
+    margin-top: 2rem;
+    margin-bottom: -2px;
+}
+
+.header-wave, .footer-wave {
+    display: flex;
+}
+.header-wave svg, .footer-wave svg {
+    width: 100%;
+    height: 100%;
+}
+
+/* end waves */
+
 #content {
     max-width: 100rem;
     margin: auto;
@@ -88,11 +104,7 @@ header *, footer * {
 
 footer {
     text-align: center;
-    margin-top: 2rem;
-    background: url(/front/themes/wave/imgs/wave-footer.svg) top /100% auto,
-                var(--main-color) content-box;
-    background-repeat: no-repeat;
-    padding-top: 5%;
+    background: var(--main-color);
 }
 footer > *:first-child {
     padding-top: 2rem !important;
