--- a/css/markdown.css
+++ b/css/markdown.css
@@ -94,7 +94,7 @@
 }
 .markdown a {
     color: #0366d6;
-    color: var(--main-color);
+    color: var(--accent-color);
     text-decoration: underline;
 }
 .markdown a:hover {
@@ -102,10 +102,10 @@
 }
 .markdown strong {
     font-weight: bold;
-    color: var(--main-color);
+    color: var(--accent-color);
 }
 .markdown em {
-    color: var(--main-color);
+    color: var(--accent-color);
 }
 .markdown hr {
     height: 0;
@@ -147,7 +147,7 @@
 .markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown h5, .markdown h6 {
     margin-top: 0;
     margin-bottom: 0;
-    color: var(--main-color);
+    color: var(--accent-color);
 }
 .markdown h1 {
     font-size: 32px;
@@ -517,7 +517,7 @@
     word-wrap: break-all;
 }
 .markdown li::marker {
-    color: var(--main-color);
+    color: var(--accent-color);
 }
 .markdown li>p {
     margin-top: 16px;
