--- a/css/page.css
+++ b/css/page.css
@@ -1,6 +1,8 @@
 :root {
-    --main-color: #375662;
-    --main-color-light: #709fb0;
+    --accent-color: #375662;
+    --accent-color-light: #709fb0;
+    --main-color: #1a1a1a;
+    --white: #fff;
 }
 
 body {
@@ -18,21 +20,18 @@ body {
 header {
     text-align: center;
     background: var(--main-color);
-}
-header > *:first-child {
-    padding-top: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    padding: 15px 30px 0px 15px;
 }
 header > * {
-    padding-left: 1rem;
-    padding-right: 1rem;
-}
-
-header > p {
-    margin-bottom: 1rem !important;
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 header img {
-    max-width: 23rem !important;
+    max-width: 15rem !important;
     width: 100% !important;
     background: transparent !important;
 }
@@ -50,37 +49,48 @@ header a:hover {
     text-decoration: underline !important;
 }
 
+header .spacer {
+    flex: 1;
+}
+
 header *, footer * {
     color: #fff !important;
 }
 
 /* waves */
-.header-wave {
-    margin-bottom: 2rem;
-    margin-top: -2px;
-}
-.footer-wave {
-    margin-top: 2rem;
-    margin-bottom: -2px;
-}
-
 .header-wave, .footer-wave {
     display: flex;
+    margin-top: -1px;
+    margin-bottom: -1px;
 }
 .header-wave svg, .footer-wave svg {
     width: 100%;
     height: 100%;
+    fill: var(--main-color);
 }
-
 /* end waves */
 
 #content {
     max-width: 100rem;
-    margin: auto;
-    margin-left: 20%;
-    margin-right: 20%;
+    padding-left: 20%;
+    padding-right: 20%;
     font-size: 1.2rem;
     flex: 3;
+    overflow: auto;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.markdown h2 a {
+    background: var(--accent-color);
+    color: var(--white);
+    padding: 5px;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.markdown h2 a:hover {
+    text-decoration: underline;
 }
 
 /* list_image */
@@ -102,38 +112,55 @@ header *, footer * {
 }
 /* end list_image */
 
+/* social icons */
+.social-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.social-icons a:not(:last-child) {
+    margin-right: 15px;
+}
+.social-icons svg {
+    width: 2rem;
+    height: 2rem;
+    fill: var(--white);
+    transition: fill .2s ease-in-out;
+}
+.social-icons a:hover svg {
+    fill: var(--accent-color-light);
+}
+.social-icons p {
+    font-size: 0;
+}
+/* end social icons */
+
 footer {
     text-align: center;
     background: var(--main-color);
-}
-footer > *:first-child {
-    padding-top: 2rem !important;
-}
-footer > *:last-child {
-    padding-bottom: 2rem;
+    padding: 0px 15px 20px 15px;
 }
 footer > * {
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding: 0 !important;
 }
 
 @media all and (max-width: 1000px) {
     #content {
-        margin-left: 15%;
-        margin-right: 15%;
+        padding-left: 15%;
+        padding-right: 15%;
     }
 }
 
 @media all and (max-width: 850px) {
     #content {
-        margin-left: 3rem;
-        margin-right: 3rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 }
 
 @media all and (max-width: 500px) {
     #content {
-        margin-left: 1rem;
-        margin-right: 1rem;
+        padding-left: 1rem;
+        padding-right: 1rem;
     }
 }
