--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -10,22 +10,20 @@
     <%- include("../../../../../templates/theme.ejs") %>
 </head>
 <body>
-    <header class="markdown">
-        <%- html_header %>
-    </header>
-    <div class="header-wave">
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 2440 150">
-            <defs
-                id="defs8" />
-            <path
-                fill="#375662ff"
-                fill-opacity="1"
-                d="m 0,96 135.55556,10.7 C 271.11111,117 542.22222,139 813.33333,128 1084.4444,117 1355.5556,75 1626.6667,53.3 1897.7778,32 2168.8889,32 2304.4444,32 H 2440 V 0 H 2304.4444 C 2168.8889,0 1897.7778,0 1626.6667,0 1355.5556,0 1084.4444,0 813.33333,0 542.22222,0 271.11111,0 135.55556,0 H 0 Z"
-                id="path2"
-                style="stroke-width:1.30171" />
-        </svg>
+    <div class="header-box">
+        <header class="markdown">
+            <%- html_header %>
+        </header>
+        <div class="header-wave">
+            <svg
+                id="wave"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 2440 150">
+                <path
+                    d="m 0,96 135.55556,10.7 C 271.11111,117 542.22222,139 813.33333,128 1084.4444,117 1355.5556,75 1626.6667,53.3 1897.7778,32 2168.8889,32 2304.4444,32 H 2440 V 0 H 2304.4444 C 2168.8889,0 1897.7778,0 1626.6667,0 1355.5556,0 1084.4444,0 813.33333,0 542.22222,0 271.11111,0 135.55556,0 H 0 Z"
+                    style="stroke-width:1.30171" />
+            </svg>
+        </div>
     </div>
     <div id="content" class="markdown post_content">
         <div class="enclosure_container" style="background-image: url('<%- enclosure %>')">
@@ -34,22 +32,20 @@
         </div>
         <%- post_content %>
     </div>
-    <div class="footer-wave">
-        <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 2440 150">
-            <defs
-                id="defs8" />
-            <path
-                fill="#375662ff"
-                fill-opacity="1"
-                d="m 2440,54.000004 -135.5556,-10.7 c -135.5555,-10.3 -406.6666,-32.3 -677.7777,-21.3 -271.1111,11 -542.2223,53 -813.33337,74.7 C 542.22222,118 271.11111,118 135.55556,118 H 0 v 32 h 135.55556 c 135.55555,0 406.66666,0 677.77777,0 271.11107,0 542.22227,0 813.33337,0 271.1111,0 542.2222,0 677.7777,0 H 2440 Z"
-                id="path2"
-                style="stroke-width:1.30171" />
-        </svg>
+    <div class="footer-box">
+        <div class="footer-wave">
+            <svg
+                id="wave"
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 2440 150">
+                <path
+                    d="m 2440,54.000004 -135.5556,-10.7 c -135.5555,-10.3 -406.6666,-32.3 -677.7777,-21.3 -271.1111,11 -542.2223,53 -813.33337,74.7 C 542.22222,118 271.11111,118 135.55556,118 H 0 v 32 h 135.55556 c 135.55555,0 406.66666,0 677.77777,0 271.11107,0 542.22227,0 813.33337,0 271.1111,0 542.2222,0 677.7777,0 H 2440 Z"
+                    style="stroke-width:1.30171" />
+            </svg>
+        </div>
+        <footer class="markdown">
+            <%- html_footer %> 
+        </footer>
     </div>
-    <footer class="markdown">
-        <%- html_footer %> 
-    </footer>
 </body>
 </html>
