new version of cestmaddy

--- a/templates/normal.ejs
+++ b/templates/normal.ejs
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <% if(page_title == "") { %>
-        <title><%- site_title %></title>
+    <% if(normal.title == "") { %>
+        <title><%- site.title %></title>
     <% } else { %>
-        <title><%- page_title %> | <%- site_title %></title>
+        <title><%- normal.title %> | <%- site.title %></title>
     <% } %>
+    <meta name="description" content="<%- normal.meta_description %>">
 
     <%- include("../../../../../templates/favicons.ejs") %>
 
@@ -16,13 +17,13 @@
 <body>
     <div class="body-content">
         <header class="markdown">
-            <%- html_header %>
+            <%- site.header %>
         </header>
         <div id="content" class="markdown">
-            <%- html_content %> 
+            <%- normal.html %> 
         </div>
         <footer class="markdown">
-            <%- html_footer %> 
+            <%- site.footer %> 
         </footer>
     </div>
 </body>
