--- a/templates/blog.ejs
+++ b/templates/blog.ejs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%- post_title %> | <%- site_title %></title>
+    <title><%- post.title %> | <%- site.title %></title>
+    <meta name="description" content="<%- post.meta_description %>">
 
     <%- include("../../../../../templates/favicons.ejs") %>
 
@@ -11,17 +12,17 @@
 </head>
 <body>
     <header class="markdown">
-        <%- html_header %>
+        <%- site.header %>
     </header>
     <div id="content" class="markdown post_content">
-        <div class="enclosure_container" style="background-image: url('<%- enclosure %>')">
-            <h1 class="post_title"><%- post_title %></h1>
-            <p class="post_infos"><%- post_author %>, <strong><%- post_relative_date %></strong> <%- post_date_string %></p>
+        <div class="enclosure_container" style="background-image: url('<%- post.enclosure %>')">
+            <h1 class="post_title"><%- post.title %></h1>
+            <p class="post_infos"><%- post.author.name %>, <strong><%- post.relative_date %></strong> <%- post.date_string %></p>
         </div>
-        <%- post_content %>
+        <%- post.html %>
     </div>
     <footer class="markdown">
-        <%- html_footer %> 
+        <%- site.footer %> 
     </footer>
 </body>
 </html>
