--- a/css/markdown.css
+++ b/css/markdown.css
@@ -16,3 +16,11 @@ iframe {
     margin: 0 auto;
     display: block;
 }
+
+pre {
+    white-space: pre-line;
+    font-size: 1rem;
+}
+pre > code {
+    word-wrap: anywhere;
+}
